# video-encryption

./: package-lock.json  package.json
src/: App.css  App.tsx  EncryptVideo.tsx  GenerateAccessKey.tsx  GenerateCertificate.tsx  MainMenu.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  video_encryption.rs
src/components/: BackButton.tsx
src/components/HelpSystem/: HelpButton.tsx  HelpModal.tsx
src/components/ui/: Button.tsx  InputGroup.tsx  StatusBox.tsx  dialog.tsx
src/contexts/: HelpContext.tsx
