[package]
name = "video-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gui_vid_encrypt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
aes = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.4", features = ["derive"] }
ctr = "0.9.2"
p12 = "0.6.3"
p12-keystore = "=0.1.4"
rand = "0.8.0"
rcgen = "0.13.2"
rsa = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
zeroize = "1.8.1"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
